DataViews: Fix patterns pagination `z-index`

--- a/packages/edit-site/src/components/page-patterns/style.scss
+++ b/packages/edit-site/src/components/page-patterns/style.scss
@@ -101,6 +101,10 @@
 		text-overflow: ellipsis;
 		color: inherit;
 	}
+
+	.dataviews-pagination {
+		z-index: 2;
+	}
 }
 
 .dataviews-action-modal__duplicate-pattern {
